@@ -18,6 +18,8 @@
 
 <dependencies>
 <!-- Spring Framework -->
+     
+
 <dependency>
 <groupId>org.springframework</groupId>
 <artifactId>spring-webmvc</artifactId>
@@ -35,6 +37,12 @@
 <artifactId>jstl</artifactId>
 <version>1.2</version>
 </dependency>
+         <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.36</version>
+</dependency>
+
 <dependency>
 <groupId>junit</groupId>
 <artifactId>junit</artifactId>
@@ -78,26 +86,36 @@
 </plugin>
 <!-- JaCoCo Maven Plugin -->
 <plugin>
-<groupId>org.jacoco</groupId>
-<artifactId>jacoco-maven-plugin</artifactId>
-<version>0.8.10</version>
-<executions>
-<execution>
-<goals>
-<goal>prepare-agent</goal>
-</goals>
-</execution>
-<execution>
-<id>report</id>
-<phase>prepare-package</phase>
-<goals>
-<goal>report</goal>
-</goals>
-</execution>
-</executions>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.7</version>
+    <executions>
+        <execution>
+            <id>prepare-agent</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>
 </plugin>
 
- 
+
+ <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.1</version>
+    <configuration>
+        <argLine>--enable-preview</argLine>
+    </configuration>
+</plugin>
+
 
         </plugins>
 </build>
